--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,7 @@ celerybeat-schedule
 *.sage.py
 
 # Environments
+.idea
 .env
 .venv
 env/
@@ -113,7 +114,6 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# Custom Ignore
+# Custom
 Custom-Backgrounds
 Downloaded-Images
-.idea
